syntax = "proto3";

// define package name of the proto file
package packageName;

// Set up the microservice and define all endpoints with argument and return types
service SampleService{
  rpc CreateSampleResource (Resource) returns (Empty) {}
  rpc UpdateSampleResource (Resource) returns (Empty) {}
  rpc DeleteSampleResource (ResourceId) returns (Empty) {}
  rpc FindSampleResource (ResourceId) returns (Resource) {}
  rpc ListSampleResource (Empty) returns (ResourceList) {}
}

// define the message formats used by the in the Interface definitions
message Empty {}

message Resource {
  int32 id = 1;
  string name = 2;
}

message ResourceId {
  int32 id = 1;
}

message ResourceList {
  repeated Resource resources = 1;
}